<resources>
    <string name="app_name">Reel Talk</string>
    <string name="logo">Logo</string>
    <string name="reel_talk">REEL TALK</string>
    <string name="welcome">Welcome</string>
    <string name="continueText">Continue</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="welcome_to_reel_talk">Welcome to Reel Talk, a community\n designed for true film and TV Show fans</string>
    <string name="discover_and_discuss">Discover and discuss your favorite films,\n movies, and shows</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="image">Image</string>
    <string name="your_profile">Your profile</string>
    <string name="display_name">Display name</string>
    <string name="your_display_name_will_be_visible_to_other_users">Your display name will be visible to other users.</string>
    <string name="your_birthday">Your birthday</string>
    <string name="your_birthday_will_be_used_to_tailor_our_content_for_you_n_it_won_t_be_shared_with_any_third_parties">Your birthday will be used to tailor our content for you.\n It won\'t be shared with any third parties.</string>
    <string name="k">K</string>
    <string name="turn_on_push_n_notifications">Turn on push\n notifications</string>
    <string name="stay_in_the_loop_with_fellow_enthusiasts_in_n_discussions">Stay in the loop with fellow enthusiasts in\n discussions.</string>
    <string name="get_instant_alerts_on_upcoming_movies">Get instant alerts on upcoming movies,\n fan-favorite recommendations, and\n exciting movie events</string>
    <string name="you_can_turn_it_off">You can turn it off anytime in the system\n notification settings.</string>
    <string name="turn_off_notifications">Turn off notifications</string>
    <string name="not_now">Not now</string>
    <string name="welcome_user">Welcome</string>
    <string name="let_s_get_to_know_you_better">Let\'s get to know you better and\n personalize your experience!</string>
    <string name="select_your_top_3">Select your top 3 genres for\n movies and TV</string>
    <string name="_0_3_selected">0/3 selected</string>
    <string name="_0_5_selected">0/5 selected</string>
    <string name="select_your_top_5_n_movies">Select your top 5\n movies</string>
    <string name="search_to_add_more">Search to add more</string>
    <string name="show_image">Show Image</string>
    <string name="checkmark_icon">Checkmark Icon</string>
    <string name="keep_it_real_n_but_be_kind">Keep it real,\n but be kind</string>
    <string name="end_text">Welcome, we\'re so excited to have you here!\n\n
At Reel Talk, we believe that every individual brings something unique to our community. We are committed to fostering a safe and respectful environment for everyone to engage in exciting conversations.\n\n
In our mission to encourage respect and belongingness, we ask that you join us by adhering to our guidelines. We take these guidelines seriously, and failure to adhere to them may result in being banned from our community. Thanks for your cooperation.\n\n
With love,\n
The Reel Talk Team</string>
    <string name="i_agree">I agree</string>
</resources>