<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/your_profile"
        android:textAppearance="@style/TitleH2"
        android:layout_marginTop="70dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        app:civ_border_width="0dp"
        android:layout_centerInParent="true"
        android:src="@drawable/baseline_circle_24"
        app:civ_border_color="#FF000000"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        android:layout_centerInParent="true"
        android:src="@drawable/baseline_add_circle_24"
        app:civ_border_width="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="21dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/k"
        android:textAppearance="@style/TitleH1"
        app:layout_constraintStart_toStartOf="@+id/profileImage"
        app:layout_constraintEnd_toEndOf="@id/profileImage"
        app:layout_constraintTop_toTopOf="@id/profileImage"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/displayName"
        android:layout_marginTop="40dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/display_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/nameTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_display_name_will_be_visible_to_other_users"
        app:layout_constraintTop_toBottomOf="@+id/displayName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/PreText"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthday"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/your_birthday">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthdayInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/birthdayTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_birthday_will_be_used_to_tailor_our_content_for_you_n_it_won_t_be_shared_with_any_third_parties"
        app:layout_constraintTop_toBottomOf="@+id/birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/PreText"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/birthdayTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/continueText"
        style="@style/MaterialButtonStyle"
        android:layout_marginTop="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
